// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with no project 1`] = `
<div>
  <div
    class="chakra-skeleton css-1p3r0co"
  />
</div>
`;

exports[`renders correctly with validation 1`] = `
<div>
  <div
    class="css-s8hfc8"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Validation Body
      </p>
      <p
        class="chakra-text css-0"
      >
        Colombian Institute for Technical Standards and Certification (ICONTEC)
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Validation Status Updated On
      </p>
      <p
        class="chakra-text css-0"
      >
        2023/04/15
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Verification Approach
      </p>
      <p
        class="chakra-text css-0"
      >
        <p
          class="chakra-text css-0"
        >
          Details on website: https://www.ecoregistry.io/projects/151
        </p>
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Verification Period
      </p>
      <div
        class="css-0"
      >
        <div
          class="css-0"
        >
          <p
            class="chakra-text css-0"
          >
            2019/12/04
             - 
            2023/12/31
          </p>
          <button
            class="chakra-button css-4xx2wk"
            data-testid="verification-expand"
            type="button"
          >
            View More
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly with validation and no date 1`] = `
<div>
  <div
    class="css-s8hfc8"
  >
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Validation Body
      </p>
      <p
        class="chakra-text css-0"
      >
        Colombian Institute for Technical Standards and Certification (ICONTEC)
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Validation Status Updated On
      </p>
      <p
        class="chakra-text css-0"
      >
        --
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Verification Approach
      </p>
      <p
        class="chakra-text css-0"
      >
        <p
          class="chakra-text css-0"
        >
          Details on website: https://www.ecoregistry.io/projects/151
        </p>
      </p>
    </div>
    <div
      class="css-0"
    >
      <p
        class="chakra-text css-1xi4xed"
      >
        Verification Period
      </p>
      <div
        class="css-0"
      >
        <div
          class="css-0"
        >
          <p
            class="chakra-text css-0"
          >
            2019/12/04
             - 
            2023/12/31
          </p>
          <button
            class="chakra-button css-4xx2wk"
            data-testid="verification-expand"
            type="button"
          >
            View More
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
